# old_lab2

./: CMakeLists.txt  main.cpp
structs/: ArraySequence.h  DynamicArray.h  ISort.h  LinkedList.h  ListSequence.h  Sequence.h  main.cpp  smart_ptrs.h  sorting_algorithms.h
tests/: csv_to_xl.py  display.py  performance_data.csv  performance_data.xlsx  structures_tests.cpp  structures_tests.h  test_sorting.cpp  test_sorting.h
